@@ -3,7 +3,7 @@
 #include "Ap4AsyncReaderStream.cpp" // FIXME
 
 CMP4SplitterFile::CMP4SplitterFile(IAsyncReader* pReader, HRESULT& hr) 
-	: CBaseSplitterFileEx(pReader, hr)
+	: CBaseSplitterFileEx(pReader, hr, DEFAULT_CACHE_LENGTH, false)
 	, m_pAp4File(NULL)
 {
 	if(FAILED(hr)) return;
